option java_package = "com.funcy.g01.base.proto.service";
option java_outer_classname = "AggregateServiceReqProtoBuffer";


message UserProto {
	optional int64 userid = 1;
	optional string name = 2;
	optional string pwd = 3;
	optional int32 level = 4;
	optional int32 diamond = 5;
	optional int32 cheese = 6;	
}

message UserChestProto {
	optional int64 id = 1;
	optional int32 count = 2;
	optional int32 type = 3;
	optional int64 date = 4;
}

message UserEquipProto {
	optional int64 userid = 1;
	optional int64 propsid = 2;
	optional int32 count = 3;        
}
	
message MapChestProto {
	optional int64 userid = 1;
	optional string  chest = 2;
	optional int32 count = 3;        
}


message MapEquipProto {
	optional int32 userid = 1;
	optional string props = 2;
	optional int32 count = 3;        
}



